plugins {
    id 'java'
    id 'scala'
    id 'org.jetbrains.kotlin.jvm' version '1.6.0'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven {
        url "https://repository.apache.org/content/repositories/snapshots"
    }
    maven {
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

ext {
    scalaMajorVersion = '3'
    scalaVersion = "$scalaMajorVersion.1.0"
}

dependencies {
    implementation platform('org.jetbrains.kotlin:kotlin-bom')
    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'

    implementation "org.scala-lang:scala3-library_3:$scalaVersion"

    implementation 'org.apache.calcite:calcite-core:1.29.0-SNAPSHOT'
    compileOnly 'org.immutables:value:2.8.8'

    implementation 'com.graphql-java:graphql-java:17.3'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
}

test {
    useJUnitPlatform()
}